<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>dev.juhouse.projector</groupId>
    <artifactId>projector</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <fx.version>21-ea+5</fx.version>
        <revision>3.58</revision>
        <lib_name>render</lib_name>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <profiles>
        <profile>
            <id>windows-debug</id>
            <activation>
                <property>
                    <name>debug</name>
                    <value>true</value>
                </property>
                <os>
                    <family>windows</family>
                    <arch>amd64</arch>
                </os>
            </activation>

            <properties>
                <librender.buildDir>native/LibRender/x64/Debug</librender.buildDir>
            </properties>

            <modules>
                <module>core</module>
                <module>windows</module>
            </modules>
        </profile>

        <profile>
            <id>windows-release</id>
            <activation>
                <property>
                    <name>debug</name>
                    <value>!true</value>
                </property>
                <os>
                    <family>windows</family>
                    <arch>amd64</arch>
                </os>
            </activation>

            <properties>
                <librender.buildDir>native/LibRender/x64/Release</librender.buildDir>
            </properties>

            <modules>
                <module>core</module>
                <module>windows</module>
            </modules>
        </profile>

        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>unix</family>
                    <arch>amd64</arch>
                </os>
            </activation>

            <modules>
                <module>core</module>
                <module>linux</module>
            </modules>
        </profile>
    </profiles>

    <name>Projector</name>
</project>
